--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,58 +1,33 @@
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: $body-font;
     font-weight: 400;
     color: var(--color-grey-1);
     line-height: 1.7;
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Merriweather', serif;
+    font-family: $heading-font;
     font-weight: 300;
 }
 
 
 .heading-primary {
-    font-size: 5rem;
+    font-size: 5em;
     letter-spacing: 2px;
     
     @media only screen and (max-width: $bp-small) {
-        font-size: 3.5rem;
+        font-size: 3.5em;
     }
     
-    @media only screen and (min-width: 118em) {
-        font-size: 7rem;
-    }
-    
-    
-    &--main {
-        display: block;
-    }
-    
-    &--sub {
-        display: block;
-        
-        
-        &-underline {
-            position: relative;
-            z-index: 10;
-            
-            &::after {
-                content: '';
-                position: absolute;
-                top: 63%;
-                left: 7%;
-                width: 100%;
-                height: 1.5rem;
-                background-color: var(--color-primary);
-                z-index: -1;
-            }
-        }
+    @media only screen and (min-width: 1888px) {
+        font-size: 7em;
     }
     
 }
 
+
 .heading-secondary {
-    font-size: 2rem;
+    font-size: 2em;
     text-transform: uppercase;
     color: var(--color-dark-1);
     position: relative;
@@ -73,19 +48,19 @@ h1, h2, h3, h4 {
     
     &::before {
         left: 42%;
-        transform: translate(-42%, -50%);
+        @include transform(translate(-42%, -50%));
         
         @media only screen and (max-width: $bp-large) {
-            transform: translate(-60%, -50%);
+            @include transform(translate(-60%, -50%));
         }
         
         @media only screen and (max-width: $bp-small) {
-            transform: translate(-90%, -50%);
+            @include transform(translate(-90%, -50%));
             left: 40%;
         }
         
         @media only screen and (max-width: $bp-smallest) {
-            transform: translate(-100%, -50%);
+            @include transform(translate(-100%, -50%));
             left: 39%;
         }
         
@@ -93,19 +68,19 @@ h1, h2, h3, h4 {
     
     &::after {
         left: 58%;
-        transform: translate(-60%, -50%);
+        @include transform(translate(-60%, -50%));
         
         @media only screen and (max-width: $bp-large) {
-            transform: translate(-42%, -50%);
+            @include transform(translate(-42%, -50%));
         }
         
         @media only screen and (max-width: $bp-small) {
-            transform: translate(-11%, -50%);
+            @include transform(translate(-11%, -50%));
             left: 60%;
         }
         
         @media only screen and (max-width: $bp-smallest) {
-            transform: translate(-1%, -50%);
+            @include transform(translate(-1%, -50%));
             left: 61%;
         }
     }
@@ -124,12 +99,20 @@ h1, h2, h3, h4 {
 
 
 .heading-tertiary {
-    font-size: 3.2rem;
+    font-size: 3.2em;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
 
 
 .paragraph {
-    font-size: 1.5rem;
+    font-size: 1.5em;
+    
+    &--works {
+        color: #fff;
+        font-size: 1.6em;
+        text-align: center;
+    }
+    
 }
+
