--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,4 +1,3 @@
-
 *,
 *::before,
 *::after {
@@ -7,19 +6,20 @@
     box-sizing: inherit;
 }
 
+
 html {
-    font-size: 62.5%;
+    font-size: 10px;
     
     @media only screen and (max-width: $bp-largest) {
-        font-size: 50%;
+        font-size: 8px;
     }
     
     @media only screen and (max-width: $bp-medium) {
-        font-size: 43%;
+        font-size: 7px;
     }
     
     @media only screen and (max-width: $bp-smallest) {
-        font-size: 37.5%;
+        font-size: 6px;
     }
     
 }
@@ -29,4 +29,7 @@ body {
     
 }
 
-
+::selection {
+    background-color: var(--color-primary);
+    color: var(--color-dark-1);
+}
