--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,17 +1,18 @@
-@import "abstracts/functions";
-@import "abstracts/mixins";
-@import "abstracts/variables";
-
+@import "base/variables";
+@import "base/mixins";
 @import "base/animations";
+@import "base/fonts";
 @import "base/base";
+@import "base/button";
+@import "base/icons";
 @import "base/typography";
 @import "base/utilities";
 
-@import "components/button";
-@import "components/details";
 @import "components/mobile-menu";
 @import "components/move-top";
+@import "components/person";
 @import "components/quote";
+@import "components/technologies";
 @import "components/works";
 
 @import "layout/about";
@@ -19,5 +20,3 @@
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
-
-@import "pages/home";
