--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,15 +8,15 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import "components/mobile-menu";
-@import "components/move-top";
-@import "components/person";
-@import "components/quote";
-@import "components/technologies";
-@import "components/works";
+@import "mobile-menu";
+@import "move-top";
+@import "person";
+@import "quote";
+@import "technologies";
+@import "works";
 
-@import "layout/about";
-@import "layout/contact";
-@import "layout/footer";
-@import "layout/grid";
-@import "layout/header";
+@import "about";
+@import "contact";
+@import "footer";
+@import "grid";
+@import "header";
